<resources>
    <string name="app_name">tubespbd</string>
    <string name="title_home">Home</string>
    <string name="title_graph">Graph</string>
    <string name="title_settings">Settings</string>
    <string name="splash_text">
        ꦧꦺꦴꦤ꧀ꦝꦺꦴ
ꦩꦤ꧀
    </string>
    <string name="title_notifications">Your Notification Title</string>
    <string name="login_header_text">Selamat Datang</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="masuk_text">Masuk</string>
    <string name="title_scan">Scan</string>
    <string name="incorrect_login">Your login credentials are not correct</string>
    <string name="incorrect_email_format">Incorrect email format!</string>
    <string name="keep_me_logged_in">Keep me logged in</string>
    <string name="no_connection">No connection</string>
    <string name="reload">Reload</string>
    <string name="camera_capture_text">Capture</string>
    <string name="export_to_xslx">Export ke XSLX</string>
    <string name="export_to_xls">Export ke XLS</string>
    <string name="image_description">Hasil bill</string>
    <string name="pilih_foto">Pilih Foto</string>
    <string name="scan_text">Arahkan kameramu ke struk dan biarkan kami melihat dan memindai strukmu.</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="judul">Judul</string>
    <string name="kategori">Kategori</string>
    <string name="rp_0">Rp 0</string>
    <string name="lokasi">Lokasi</string>
    <string name="simpan">Simpan</string>
    <string name="hapus">Hapus</string>
    <string name="back">BACK</string>
    <string name="tambah_transaksi">TAMBAH TRANSAKSI</string>
    <string name="twibbon_text">Dua tiga makan abon, ayo kita pake twibbon!</string>
    <string name="twibbon">Twibbon</string>
    <string name="photo_picker_button_description">photo_picker_button_description</string>
    <string name="photo_picker_button">photo_picker_button</string>
    <string name="flip_camera">flip camera</string>
    <string name="capture_button">capture button</string>
</resources>