<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/icon_transactions"
        android:title="@string/title_home"
        android:drawable="@color/sage_green" android:state_selected="true"/>

    <item
        android:id="@+id/navigation_graph"
        android:icon="@drawable/icon_graph"
        android:title="@string/title_graph" />

    <item
        android:id="@+id/navigation_scan"
        android:icon="@drawable/icon_scan"
        android:title="@string/title_scan" />

    <item
        android:id="@+id/navigation_twibbon"
        android:icon="@drawable/icon_twibbon"
        android:title="@string/twibbon" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/icon_settings"
        android:title="@string/title_settings" />

</menu>