<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_graph">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.tubespbd.ui.home.HomeFragment"
        android:label="Home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_graph"
        android:name="com.example.tubespbd.ui.graph.GraphFragment"
        android:label="@string/title_graph"
        tools:layout="@layout/fragment_graph" />

    <fragment
        android:id="@+id/navigation_scan"
        android:name="com.example.tubespbd.ui.scan.ScanFragment"
        android:label="@string/title_scan"
        tools:layout="@layout/fragment_scan"/>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.tubespbd.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <action
        android:id="@+id/action_homeFragment_to_addTransactionFragment"
        app:destination="@id/addTransactionFragment" />

    <fragment
        android:id="@+id/addTransactionFragment"
        android:name="com.example.tubespbd.ui.home.AddTransactionFragment"
        android:label="Add Transaction"
        tools:layout="@layout/fragment_add_transaction" />

    <action
        android:id="@+id/action_homeFragment_to_editTransactionFragment"
        app:destination="@id/editTransactionFragment">
        <argument
            android:name="transactionId"
            app:argType="integer" />
    </action>

    <fragment
        android:id="@+id/showBillFragment"
        android:name="com.example.tubespbd.ui.scan.BillFragment"
        android:label="Show Bill Fragment"
        tools:layout="@layout/fragment_show_bill">
    </fragment>

    <action
        android:id="@+id/action_scanFragment_to_show_bill_fragment"
        app:destination="@id/showBillFragment">
        <argument
            android:name="savedURI"
            app:argType="string" />
    </action>


    <fragment
        android:id="@+id/editTransactionFragment"
        android:name="com.example.tubespbd.ui.home.EditTransactionFragment"
        android:label="EditTransactionFragment" />

    <action
        android:id="@+id/action_showBillFragment_to_homeFragment"
        app:destination="@id/navigation_home" />

</navigation>
