<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.scan.ScanFragment">

    <androidx.camera.view.PreviewView
        android:id="@+id/previewView"
        android:layout_width="412dp"
        android:layout_height="753dp"
        android:layout_gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="0dp">
    </androidx.camera.view.PreviewView>

    <ImageButton
        android:id="@+id/capture_button"
        android:contentDescription="@string/capture_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="476dp"
        android:background="@drawable/rounded_corner_button_green"
        android:src="@drawable/icon_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/photo_picker_button"
        android:contentDescription="@string/photo_picker_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="328dp"
        android:layout_marginTop="476dp"
        android:background="@null"
        android:src="@drawable/icon_images"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/flip_camera"
        android:contentDescription="@string/flip_camera"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="476dp"
        android:background="@null"
        android:src="@drawable/icon_flip_camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/scan_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner_button"
        android:fontFamily="@font/satoshi_medium"
        android:paddingStart="20dp"
        android:paddingTop="40dp"
        android:paddingEnd="20dp"
        android:paddingBottom="30dp"
        android:text="@string/scan_text"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.87" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/satoshi_bold"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:text="Pindai Strukmu!"
        android:textColor="@color/deep_green"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/scan_text"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>